--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
   </div>
 
   <a-scene
-    renderer="colorManagement:true; physicallyCorrectLights:true"
+    renderer="colorManagement:true; physicallyCorrectLights:true; alpha:true"
     xr-mode-ui="enabled: true"
     webxr="optionalFeatures: local-floor, bounded-floor, hit-test, dom-overlay; overlayElement: body"
-    background="color: #05070f">
+    background="transparent: true">
 
     <a-assets>
       <a-asset-item id="robotModel" src="https://raw.githubusercontent.com/mrdoob/three.js/dev/examples/models/gltf/RobotExpressive/RobotExpressive.glb"></a-asset-item>
@@ -51,7 +51,7 @@
       animation__bob="property: position; dir: alternate; loop: true; dur: 2200; to: 0 0.07 -2.1"
       animation__turn="property: rotation; dir: alternate; loop: true; dur: 4200; to: 0 8 0">
 
-      <a-entity gltf-model="#robotModel" scale="0.28 0.28 0.28" position="0 0 0" rotation="0 180 0"
+      <a-entity gltf-model="#robotModel" scale="0.28 0.28 0.28" position="0 0 0" rotation="0 0 0"
         animation-mixer="clip: Idle; loop: repeat"></a-entity>
 
       <a-cylinder radius="0.28" height="0.03" color="#20305f" position="0 -0.02 0"
@@ -70,7 +70,7 @@
     <a-entity light="type: point; intensity: 1.1; distance: 6; color: #77a7ff" position="0 1.2 -2.1"></a-entity>
 
 
-    <a-plane rotation="-90 0 0" width="20" height="20" color="#0a1022" opacity="0.55"></a-plane>
+    <!-- floor hidden for passthrough-style AR focus -->
   </a-scene>
 
   <script>
