--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
 
     <a-assets>
       <a-asset-item id="robotModel" src="https://raw.githubusercontent.com/mrdoob/three.js/dev/examples/models/gltf/RobotExpressive/RobotExpressive.glb"></a-asset-item>
+      <img id="space1" src="assets/window-space-1.png" />
+      <img id="space2" src="assets/window-space-2.png" />
+      <img id="space3" src="assets/window-space-3.png" />
     </a-assets>
 
     <a-entity light="type: ambient; intensity: 0.55; color: #aeb8d8"></a-entity>
@@ -52,9 +55,12 @@
     <a-plane id="navPlane" class="clickable" rotation="-90 0 0" position="0 0 0" width="16" height="16" color="#4e5562" material="roughness:0.95; metalness:0.1"></a-plane>
 
     <!-- windows -->
-    <a-plane position="-4.6 2.6 -5.94" width="2.8" height="1.8" color="#91b3d8" opacity="0.45" material="transparent:true"></a-plane>
-    <a-plane position="0 2.6 -5.94" width="2.8" height="1.8" color="#91b3d8" opacity="0.45" material="transparent:true"></a-plane>
-    <a-plane position="4.6 2.6 -5.94" width="2.8" height="1.8" color="#91b3d8" opacity="0.45" material="transparent:true"></a-plane>
+    <a-plane position="-4.6 2.6 -5.94" width="2.8" height="1.8" src="#space1" material="shader: flat; emissive: #ffffff; emissiveIntensity: 0.15"></a-plane>
+    <a-plane position="0 2.6 -5.94" width="2.8" height="1.8" src="#space2" material="shader: flat; emissive: #ffffff; emissiveIntensity: 0.15"></a-plane>
+    <a-plane position="4.6 2.6 -5.94" width="2.8" height="1.8" src="#space3" material="shader: flat; emissive: #ffffff; emissiveIntensity: 0.15"></a-plane>
+    <a-box position="-4.6 2.6 -5.98" width="2.95" height="1.95" depth="0.03" color="#2f3644"></a-box>
+    <a-box position="0 2.6 -5.98" width="2.95" height="1.95" depth="0.03" color="#2f3644"></a-box>
+    <a-box position="4.6 2.6 -5.98" width="2.95" height="1.95" depth="0.03" color="#2f3644"></a-box>
 
     <!-- benches -->
     <a-box position="-5.2 0.45 -3.6" width="3.1" height="0.12" depth="0.9" color="#474d58"></a-box>
