feat: add realistic window crossbars and subtle animated space panel glow

--- a/index.html
+++ b/index.html
@@ -55,12 +55,27 @@
     <a-plane id="navPlane" class="clickable" rotation="-90 0 0" position="0 0 0" width="16" height="16" color="#4e5562" material="roughness:0.95; metalness:0.1"></a-plane>
 
     <!-- windows -->
-    <a-plane position="-4.6 2.6 -5.94" width="2.8" height="1.8" src="#space1" material="shader: flat; emissive: #ffffff; emissiveIntensity: 0.15"></a-plane>
-    <a-plane position="0 2.6 -5.94" width="2.8" height="1.8" src="#space2" material="shader: flat; emissive: #ffffff; emissiveIntensity: 0.15"></a-plane>
-    <a-plane position="4.6 2.6 -5.94" width="2.8" height="1.8" src="#space3" material="shader: flat; emissive: #ffffff; emissiveIntensity: 0.15"></a-plane>
+    <a-plane position="-4.6 2.6 -5.94" width="2.8" height="1.8" src="#space1" material="shader: flat; emissive: #ffffff; emissiveIntensity: 0.2"
+      animation="property: material.emissiveIntensity; dir: alternate; loop: true; dur: 7000; to: 0.35"></a-plane>
+    <a-plane position="0 2.6 -5.94" width="2.8" height="1.8" src="#space2" material="shader: flat; emissive: #ffffff; emissiveIntensity: 0.2"
+      animation="property: material.emissiveIntensity; dir: alternate; loop: true; dur: 8200; to: 0.34"></a-plane>
+    <a-plane position="4.6 2.6 -5.94" width="2.8" height="1.8" src="#space3" material="shader: flat; emissive: #ffffff; emissiveIntensity: 0.2"
+      animation="property: material.emissiveIntensity; dir: alternate; loop: true; dur: 7600; to: 0.33"></a-plane>
+
+    <!-- Window frames -->
     <a-box position="-4.6 2.6 -5.98" width="2.95" height="1.95" depth="0.03" color="#2f3644"></a-box>
     <a-box position="0 2.6 -5.98" width="2.95" height="1.95" depth="0.03" color="#2f3644"></a-box>
     <a-box position="4.6 2.6 -5.98" width="2.95" height="1.95" depth="0.03" color="#2f3644"></a-box>
+
+    <!-- Window mullions (cross bars for realism) -->
+    <a-box position="-4.6 2.6 -5.93" width="0.06" height="1.8" depth="0.02" color="#4a556b"></a-box>
+    <a-box position="-4.6 2.6 -5.93" width="2.8" height="0.06" depth="0.02" color="#4a556b"></a-box>
+
+    <a-box position="0 2.6 -5.93" width="0.06" height="1.8" depth="0.02" color="#4a556b"></a-box>
+    <a-box position="0 2.6 -5.93" width="2.8" height="0.06" depth="0.02" color="#4a556b"></a-box>
+
+    <a-box position="4.6 2.6 -5.93" width="0.06" height="1.8" depth="0.02" color="#4a556b"></a-box>
+    <a-box position="4.6 2.6 -5.93" width="2.8" height="0.06" depth="0.02" color="#4a556b"></a-box>
 
     <!-- benches -->
     <a-box position="-5.2 0.45 -3.6" width="3.1" height="0.12" depth="0.9" color="#474d58"></a-box>
