--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
 
     <!-- windows -->
     <!-- Recessed windows: ~0.16m (~6in) inset for depth -->
-    <a-plane position="-4.6 2.6 -6.12" width="2.64" height="1.64" src="#space1" material="shader: flat; emissive: #ffffff; emissiveIntensity: 0.2"
+    <a-plane position="-4.6 2.6 -6.10" width="2.64" height="1.64" src="#space1" material="shader: flat; side: double; emissive: #ffffff; emissiveIntensity: 0.2"
       animation="property: material.emissiveIntensity; dir: alternate; loop: true; dur: 7000; to: 0.35"></a-plane>
-    <a-plane position="0 2.6 -6.12" width="2.64" height="1.64" src="#space2" material="shader: flat; emissive: #ffffff; emissiveIntensity: 0.2"
+    <a-plane position="0 2.6 -6.10" width="2.64" height="1.64" src="#space2" material="shader: flat; side: double; emissive: #ffffff; emissiveIntensity: 0.2"
       animation="property: material.emissiveIntensity; dir: alternate; loop: true; dur: 8200; to: 0.34"></a-plane>
-    <a-plane position="4.6 2.6 -6.12" width="2.64" height="1.64" src="#space3" material="shader: flat; emissive: #ffffff; emissiveIntensity: 0.2"
+    <a-plane position="4.6 2.6 -6.10" width="2.64" height="1.64" src="#space3" material="shader: flat; side: double; emissive: #ffffff; emissiveIntensity: 0.2"
       animation="property: material.emissiveIntensity; dir: alternate; loop: true; dur: 7600; to: 0.33"></a-plane>
 
     <!-- Outer trim at wall surface -->
